Added infomation to the Lecturer page

--- a/Views/Account/Lecturer.cshtml
+++ b/Views/Account/Lecturer.cshtml
@@ -11,8 +11,16 @@
 <a href="/Claims/Create">Submit a Claim</a>
 <a href="/Claims/MyClaims">View My Claims</a>
 <a href="/Account/Logout">Logout</a>
+<p>
+    Welcome, Lecturer! This dashboard is your central hub where you can manage all
+    your claim-related activities and access important features of the system.
+</p>
 
-<p>Welcome, Lecturer! What would you like to do:</p>
+<p>
+    This dashboard is designed to give you quick access to the tools you need,
+    while also keeping track of your activity in the system.
+    Make sure to submit claims on time to avoid delays in processing and approvals.
+</p>
 
 
 
