Added some code to the logout page

--- a/Views/Account/Logout.cshtml
+++ b/Views/Account/Logout.cshtml
@@ -7,7 +7,14 @@
 
 <h2>Logout</h2>
 
-<p>You have successfully logged out.</p>
+<div class="container" style="text-align:center; margin-top:50px;">
+    <h2>Logout</h2>
 
-<a href="/Account/Login"><button>Click here to Login again</button></a>
+    <p>You have successfully logged out of the system.</p>
+    <p>For security reasons, always make sure to close your browser if you’re on a public or shared computer.</p>
+
+    <a href="/Account/Login">
+        <button> Login Again</button>
+    </a>
+</div>
 
